# invoice-matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  import_data.py  migrate_v2.py  pyproject.toml  reconcile.py  requirements.txt  run_web.py
.github/workflows/: deploy-production.yml  docker.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  auth.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchSyncProgressToast.tsx  FolderPickerDialog.tsx  SyncProgressToast.tsx
frontend/src/context/: LocalModeContext.tsx  SyncContext.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: crypto.ts  utils.ts
matching/: __init__.py  matcher.py  strategies.py
models/: __init__.py  invoice.py  transaction.py
parsers/: __init__.py  csv_parser.py  ekasa_parser.py  fio_api.py  llm_extractor.py  pdf_parser.py
reports/: __init__.py  html_reporter.py  reporter.py
web/: __init__.py  auth.py  config.py  main.py  security.py
web/database/: __init__.py  connection.py  models.py
web/routers/: __init__.py  auth.py  dashboard.py  gdrive.py  invoices.py  known_transactions.py  reconciliation.py  reconciliation_sse.py  secrets.py  settings.py  sse.py  transactions.py
web/schemas/: __init__.py  auth.py  gdrive.py  invoices.py  known_transaction.py  reconciliation.py  secrets.py  transactions.py
web/services/: __init__.py  gdrive_service.py  known_trans_service.py  matching_service.py  reconcile_service.py
web/static/: index.html
(+37 files in other folders)
